# rustyGL

./: Cargo.toml
.github/workflows/: rust.yml
src/: debug.rs  ebo.rs  gpu.rs  lib.rs  ssbo.rs  vao.rs  vbo.rs
src/shader/: compute_shader.rs  mod.rs  pipeline_shader.rs  shader_source.rs  uniform.rs
src/shapes/: custom.rs  mod.rs  rect.rs  rectangle.rs  shape.rs
src/vector/: mod.rs  vector2.rs  vector3.rs  vector4.rs
src/vertices/: ebo.rs  mod.rs  vao.rs  vbo.rs  vertex.rs
src/windows/: default_shaders.rs  mod.rs  window.rs  window_builder.rs
src/windows/shader/: fragment_shader_default.glsl  vertex_shader_default.glsl
tests/: gl_test.rs  ssbo_test.rs  tests.rs
tests/shader_tests/: compute_shader_test.rs  mod.rs
