[package]
name = "rusty_gl"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
sdl2 = "0.35.1"
gl = "0.14.0"

[dependencies]
sdl2 = "0.35.1"
gl = "0.14.0"
vector = { path = "../vector" }